# scsketch

./: .gitignore  ARCHITECTURE.md  README.md  Untitled.ipynb  debug.ipynb  demo.ipynb  pyproject.toml  scSketch.ipynb
.github/workflows/: publish.yml  release.yml
benchmarks/: README.md  perf_retest.py  test_lord_test.py
jscatter/notebooks/: scSketch.ipynb
scsketch/: __init__.py  _cli.py  scsketch.py  utils.py
scsketch/widgets/: __init__.py  divider.py  gene_pathway_widget.py  label.py
src/scsketch/: __init__.py  _analysis.py  _api.py  _cli.py  _data.py  _diffexpr.py  _logging.py  _results.py  _scatter.py  _ui.py  _utils.py  analysis.py  dimbridge.ipynb  directional.py  scsketch.py  utils.py  widgets.py
src/scsketch/static/widgets/: correlation_table.css  correlation_table.js  divider.css  divider.js  gene_pathway_widget.css  gene_pathway_widget.js  gene_projection_plot.css  gene_projection_plot.js  gene_violin_plot.css  gene_violin_plot.js  interactive_svg.css  interactive_svg.js  label.css  label.js  pathway_table.css  pathway_table.js
src/scsketch/widgets/: Untitled.ipynb  __init__.py  correlation_table.py  divider.py  gene_pathway_widget.py  gene_projection_plot.py  gene_violin_plot.py  interactive_svg.py  label.py  pathway_table.py
tests/: test_diffexpr_sum_sqsum.py
