[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scsketch"
version = "0.1.0"
description = "Interactive exploration of single-cell embeddings with directional analysis"
readme = "README.md"
authors = [
    {name = "Askar Temirbek", email = "askar.temirbek@umassmed.edu"},
    {name = "Fritz Lekschas", email = "code@lekschas.de"},
    {name = "Kris Sankaran", email = "ksankaran@wisc.edu"},
    {name = "Andres Colubri", email = "andres.colubri@umassmed.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["single-cell", "visualization", "jupyter", "widget", "bioinformatics"]
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.0",
    "ipywidgets>=8.0.0",
    "jupyter-scatter>=0.21.0",
    "matplotlib>=3.7.0",
    "numba>=0.59.0,<0.60.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "scanpy>=1.9.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "watchfiles>=0.20.0",
    "ruff",
    "jupyterlab>=4.0.0",
    "debugpy>=1.8.0",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]  # pycodestyle, Pyflakes, isort
ignore = []

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = [
    "watchfiles>=0.20.0",
    "ruff",
    "jupyterlab>=4.0.0",
    "debugpy>=1.8.0",
    "pytest",
]

[project.scripts]
scsketch = "scsketch._cli:main"

[project.urls]
Homepage = "https://github.com/colabobio/scsketch"
Repository = "https://github.com/colabobio/scsketch"
"Bug Tracker" = "https://github.com/colabobio/scsketch/issues"

[tool.setuptools]
packages = ["scsketch", "scsketch.widgets"]
