[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scsketch"
version = "0.2.1"
description = "Interactive exploration of single-cell embeddings with directional analysis"
readme = "README.md"
authors = [
    {name = "Askar Temirbek", email = "askar.temirbek@umassmed.edu"},
    {name = "Fritz Lekschas", email = "code@lekschas.de"},
    {name = "Kris Sankaran", email = "ksankaran@wisc.edu"},
    {name = "Andres Colubri", email = "andres.colubri@umassmed.edu"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["single-cell", "visualization", "jupyter", "widget", "bioinformatics"]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10.0",
    "anywidget>=0.9.0",
    "ipywidgets>=8.0.0",
    "jupyter-scatter>=0.21.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pooch>=1.7.0",
    "requests>=2.28.0",
    "scanpy>=1.9.0",
    "scipy>=1.11.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
fast = [
    "numba>=0.57.0",
]
dev = [
    "watchfiles>=0.20.0",
    "ruff",
    "jupyterlab>=4.0.0",
    "debugpy>=1.8.0",
    "pytest",
    "scsketch[fast]",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]  # pycodestyle, Pyflakes, isort
ignore = []

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = [
    "watchfiles>=0.20.0",
    "ruff",
    "jupyterlab>=4.0.0",
    "debugpy>=1.8.0",
    "pytest",
]

[project.scripts]
scsketch = "scsketch._cli:main"

[project.urls]
Homepage = "https://github.com/colabobio/scsketch"
Repository = "https://github.com/colabobio/scsketch"
"Bug Tracker" = "https://github.com/colabobio/scsketch/issues"

[tool.hatch.build.targets.sdist]
only-include = [
   "/src",
   "/README.md",
   "/ARCHITECTURE.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/scsketch"]

[tool.bumpversion]
current_version = "0.2.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/scsketch/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
